# CircularOS

./: .env.example  .gitignore  ARCHITECTURE.md  DECISIONS.md  DESIGN_SYSTEM.md  README.md  TASKS.md  VISUAL_QA_REPORT.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/: __init__.py  config.py  database.py  dependencies.py  main.py
apps/api/routes/: __init__.py  agents.py  audit.py  auth.py  controls.py  documents.py  evidence.py  health.py  obligations.py  organizations.py  reviews.py  settings_routes.py
apps/api/services/: __init__.py
apps/web/: capture.js  capture_after.js  check_console.js  inspect_dom.js  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/agents/: page.tsx
apps/web/src/app/(app)/changes/: page.tsx
apps/web/src/app/(app)/controls/: page.tsx
apps/web/src/app/(app)/dashboard/: page.tsx
apps/web/src/app/(app)/documents/: page.tsx
apps/web/src/app/(app)/obligations/: page.tsx
apps/web/src/app/(app)/workbench/: page.tsx
apps/web/src/app/agents/: page.tsx
apps/web/src/app/changes/: page.tsx
apps/web/src/app/controls/: page.tsx
apps/web/src/app/documents/: page.tsx
apps/web/src/app/obligations/: page.tsx
apps/web/src/app/workbench/: page.tsx
apps/web/src/components/judge/: JudgeModeProvider.tsx
apps/web/src/components/marketing/: LandingArchitecture.tsx  LandingCapabilities.tsx  LandingHero.tsx  LandingProblem.tsx  LandingSolution.tsx  LandingTrust.tsx  MarketingHeader.tsx  RegulatoryCore3D.tsx
apps/web/src/components/ui/: Card.tsx  Sidebar.tsx  Topbar.tsx
apps/web/src/lib/: utils.ts
apps/web/src/lib/api/: client.ts
apps/worker/: main.py
apps/worker/tasks/: document.py  extraction.py
infra/docker/: Dockerfile.api  Dockerfile.worker  init-pgvector.sql
infra/migrations/: env.py
infra/migrations/versions/: __init__.py
tests/: conftest.py  test_api.py
